resolvconf (1.36) unstable; urgency=low

  [ D.K. Gillmor / TH ]
  * Update dnscache update script to handle runit too.
    (Closes: #380119)

 -- Thomas Hood <jdthood@yahoo.co.uk>  Fri, 28 Jul 2006 12:00:00 +0200

resolvconf (1.35) unstable; urgency=low

  [ Daniel Nylander / TH ]
  * Add sv.po

  [ Yuri Kozlov / TH ]
  * Add ru.po; add ru translations of manpages  (Closes: #350383)

  [ Thomas Hood ]
  * DH_COMPAT=5
  * Relicense with GPL version option
  * Remove /lib/init from initscript PATH since standard readlink
    program with -f option now works as required
  * Depend on coreutils >= 5.93 to get revised readlink program

 -- Thomas Hood <jdthood@yahoo.co.uk>  Wed, 11 Jan 2006 23:53:47 +0100

resolvconf (1.34) unstable; urgency=low

  [ Thomas Hood ]
  * Tweak README
  * Update cs.po thanks to Miroslav Kure  (Closes: #322430)
  * Update FSF address
  * Use latest lsb init-functions in initscript

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun, 18 Dec 2005 16:15:29 +0000

resolvconf (1.33) unstable; urgency=medium

  * debian/control:
    + Limit Conflict with totd to versions << 1.4-4 because totd
      now (as of 1.4-4) refrains from writing to /etc/resolv.conf
      and refrains from altering /etc/dhclient-enter-hooks if
      resolvconf is installed  (Closes: #320536)
    + Enhances totd (>= 1.4-4) which includes a resolvconf update
      script
  * Update README info re: totd
  * Update debconf message to say that original resolv.conf file
    will be restored on _removal_ (rather than on purge, as in
    versions prior to 1.30).  Update de, fr, nl pt_BR; update vi
    thanks to Clytie Siddall.  (cs and ja still need updating.)

 -- Thomas Hood <jdthood@yahoo.co.uk>  Sat, 31 Jul 2005 16:00:00 +0200

resolvconf (1.32) unstable; urgency=low

  * /etc/resolvconf/update.d/libc:
    + Truncate nameserver list after 127.* and limit to three items
      This reduces the number of client notifications when a local
      caching nameserver is running