@@ -1,0 +1,1 @@
+resolvconf: maintainer-script-calls-init-script-directly
