@@ -4,6 +4,9 @@ resolvconf (1.36) unstable; urgency=low
   * Update dnscache update script to handle runit too.
     (Closes: #380119)
 
+  [ Thomas Hood ]
+  * Address lintian errors
+
  -- Thomas Hood <jdthood@yahoo.co.uk>  Fri, 28 Jul 2006 12:00:00 +0200
 
 resolvconf (1.35) unstable; urgency=low
